# pg_sugar

./: .gitignore  Cargo.toml
features/entities/: README.md
features/from_row/: Cargo.toml
features/from_row/src/: field.rs  lib.rs
features/from_row/tests/: json.rs  main.rs  option.rs  prepare.rs
features/tests/: Cargo.toml
features/tests/src/: client.rs  lib.rs
features/tests/src/assertions/: assert.rs  mod.rs
features/tests/src/assertions/table/: count.rs  mod.rs  table.rs
features/tests/src/assertions/table/data/: assertion.rs  data.rs  mod.rs  row.rs
features/tests/src/insert/: insert.rs  mod.rs
features/tests/src/insert/table/: json.rs  mod.rs  table.rs
features/tests/src/insert/table/values/: column_value.rs  mod.rs  value.rs
features/tests/src/strategies/: databases.rs  mod.rs  schemas.rs  strategy.rs
features/tests/src/tables/: column.rs  fkey.rs  mod.rs  query.rs  sort.rs  table.rs  tables.rs
features/tests/src/view/table/: aligment.rs  column.rs  mod.rs  row.rs  table.rs
features/tests/src/view/table/options/: data.rs  grid.rs  header.rs  mod.rs  options.rs  separator.rs
features/tests/tests/: client_assert.rs  client_clear.rs  client_connect.rs  client_insert.rs  client_queries.rs  client_release.rs  tables_select.rs
features/tests/tests/assertions/: count.rs  mod.rs
features/tests/tests/prepare/: books.rs  dag.rs  mod.rs
features/tests/tests/view/table/: alignment.rs  main.rs  mod.rs
features/tests/tests/view/table/row/: bottom.rs  data.rs  header.rs  mod.rs  separator.rs
pg_sugar/: Cargo.toml
