[package]
name = "pg_sugar_from_row"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.23"
quote = "1.0.29"

[dev-dependencies]
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"