[package]
name = "pg_sugar_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2.3", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

pg_sugar_from_row = { path = "../from_row" }
